segundo teste direto do vscode

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             </p>
             <diV class="corpo_sectiom_link">
                 <h2 class="corpo_sectiom_link_subtitulo">Acesse minhas redes:</h2>
-                <a class="corpo_sectiom_link_bottom" target="_blank" href="https://github.com/vikirinmm"><img src="logo\Logo_Github.png"
-                        alt="doquinho"> GitHub </a>
+                <a class="corpo_sectiom_link_bottom" target="_blank" href="https://github.com/vikirinmm"><img
+                        src="logo\Logo_Github.png" alt="doquinho"> GitHub </a>
                 <a class="corpo_sectiom_link_bottom" href="https://www.instagram.com/">
                     <img src="logo\Logo_linkedin.png" alt="doquinho">Linkedin</a>
                 <a class="corpo_sectiom_link_bottom" href=""><img src="logo\Logo_Twitch.png" alt="doquinho">Twitch</a>
